--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
                 
 <!-- about me section -->   
                         <div class="about-me-section">
-                        <h2 class="about-me-profession">Front-End Developer</h2>
+                        <h2 class="about-me-profession">Front-End Developer </h2>
+                        <h3 class="main-content-title">2+ years of development JS, React.js, Node.js 
+                          <br>  7+ completed projects</h2>
+
                         <h1 class="about-me-name">Nikolay Dovgiy</h1>
 
-                        <p class="about-me-name-description">GEOGRAPHY I live in: Lugansk region (Ukraine)
-                                                            Citizenship: Ukraine, permission to work in: Ukraine
+                        <p class="about-me-name-description">GEOGRAPHY I live in: Poltava region (Ukraine)
                                                             Ready to relocate: Ukraine, other countries,
                                                             Ready for business trips
                         </p>  
@@ -41,12 +43,19 @@
 
                             <span class="my-projects-bracket">[</span> Telegram Bot <span class="my-projects-bracket">]</span>
                             </span>
+                            <p class="my-work-experience-duty" >
+                                This is my first commercial experience in IT
+                                It was necessary to complete an order for the development of a Telegram bot - for ordering and delivering sushi. I developed the project structure, store menu and all functionality for processing and delivering goods, as well as filling 200+ product cards. The project was completed within 7 days.
+                            </p>
     </li>
                             <li class="my-projects-item">
                                 <span class="my-projects-text">
                                 <a href="https://kolyan25lk.github.io/Aim_Training_Game/" class="my-projects-link">  https://kolyan25lk.github.io/Aim_Training_Game/ </a>
                                  ........
-                            <span class="my-projects-bracket">[</span> JavaScript <span class="my-projects-bracket">]</span></span> 
+                            <span class="my-projects-bracket">[</span> JavaScript <span class="my-projects-bracket">]</span></span>
+                            <p class="my-work-experience-duty" >
+                                This project was made to consolidate my JS knowledge. The project was developed using HTML + CSS and pure JavaScript using standard functions and methods. The project was completed within 3 days.
+                            </p> 
     </li>
                             <li class="my-projects-item">
                                 <span class="my-projects-text">
@@ -55,7 +64,22 @@
 
                                 <span class="my-projects-bracket">[</span> React.js, Node.js <span class="my-projects-bracket">]</span></span>
                                 </span>
+                                <p  class="my-work-experience-duty">
+                                    This project was developed to consolidate my knowledge after completing the ITNaton training course on the Codifun platform from March 2020 - Oktober 2020. The project was created from a layout in Figma using HTML + CSS + JavaScript on React.js using the external Mapbox API and the Materialize, Node.js libraries. The project was completed within 7 days.
+                                </p>
     </li>
+    <li class="my-projects-item">
+        <span class="my-projects-text">
+        <a href="https://kolyan25lk.github.io/baker-shops/" class="my-projects-link"> https://kolyan25lk.github.io/baker-shops/ </a>
+         .....................
+
+        <span class="my-projects-bracket">[</span> React.js, Node.js <span class="my-projects-bracket">]</span></span>
+        </span>
+        <p  class="my-work-experience-duty">
+            This project was developed to consolidate my knowledge after completing the ITNaton 2.0 Frontend advanced training course on the Powercode academy platform in the period from January 2022 - Oktober 2022. The project was created from a layout in Figma using HTML + CSS + JavaScript on React.js using Webpack , Node.js. The project was completed within 15 days.
+        </p>
+</li>
+
                         </ol>
                     </div>
 <!-- my work experience section -->
@@ -77,9 +101,9 @@
 <!-- company 2-->
                 <div>
                     <h4 class="my-work-experience-position"> Bot Developer <span class="my-work-experience-company">Freelance</span></h4>
-                    <p class="my-work-experience-period"> May 2021 - up to now <span class="my-work-experience-devider"> | </span> All Country</p>
+                    <p class="my-work-experience-period"> May 2021 - February 2022 <span class="my-work-experience-devider"> | </span> All Country</p>
                     <ul class="my-work-experience-duties">
-                        <li class="my-work-experience-duty">I am engaged in the development of chat bots for messengers such as: Telegram, Viber, WhatsApp, Vkontakte .</li>
+                        <li class="my-work-experience-duty">I am engaged in the development of chat bots for messengers such as: Telegram, Viber, WhatsApp. .</li>
                         <li class="my-work-experience-duty">Development of bots with an administrative panel.</li>
                         <li class="my-work-experience-duty">I create universal bots for any business and any services: online marathons, online stores, beauty salons, medical
                         clinics, sales funnel, bots for HR and technical support users.</li>
@@ -90,7 +114,7 @@
 <!-- company 3-->
                     <div class="my-work-experience-company-block">
                         <h4 class="my-work-experience-position"> Fiber optic network engineer <span class="my-work-experience-company"> TOV "TK Driada"</span> </h4>
-                        <p class="my-work-experience-period"> March 2013 - up to now <span class="my-work-experience-devider">|</span> Ukraine</p>
+                        <p class="my-work-experience-period"> March 2013 - February 2022 <span class="my-work-experience-devider">|</span> Ukraine</p>
                         <ul class="my-work-experience-duties">
                             <li class="my-work-experience-duty">Building fiber optic networks.</li>
                             <li class="my-work-experience-duty">Maintenance of fiber optic and wimax networks. </li>
@@ -103,10 +127,16 @@
                     <div class="my-education-section">
             <div>
                 <h3 class="main-content-title">Education</h3>
-                <h4 class="my-education-university"> <span class="my-education-university-color">IT Nation 2020</span> </h4>
+                <h4 class="my-education-university"> <span class="my-education-university-color">IT Nation 1.0 </span> </h4>
                 <h3 class="my-education-specialty">Web Coder </h3>
-                <h3 class="my-education-specialty">Digital skills </h3>
+                <h3 class="my-education-specialty">HTML CSS JavaScript  </h3>
                 <p class="my-education-period"> March 2020 - Oktober 2020 <span class="my-work-education-devider">|</span> Ukraine</p>
+
+                <h4 class="my-education-university"> <span class="my-education-university-color">IT Nation 2.0</span> </h4>
+                <h3 class="my-education-specialty">Advanced Frontend Developer </h3>
+                <h3 class="my-education-specialty">JavaScript, React.js, Node.js, React-Router, props, promise </h3>
+                <p class="my-education-period"> January 2022 - Oktober 2022 <span class="my-work-education-devider">|</span> Ukraine</p>
+
 
                 <h4 class="my-education-university"> <span class="my-education-university-color">The College of the Volodymyr Dal National University of Ukraine</span> </h4>
                 <h3 class="my-education-specialty">Information systems and technologies </h3>
@@ -124,7 +154,10 @@
         <h3 class="sidebar-title">Contacts</h3>
         <div> <span class="contacts-section-type">Call:</span> <a class="contacts-section-link" href="tel:+380500252431">+38 050 025 24 31</a></div>
         <div> <span class="contacts-section-type">E-mail:</span> <a class="contacts-section-link" href="mailto:kolyan25lk@gmail.com">kolyan25lk@gmail.com</a></div>
-     <div> <span class="contacts-section-type">Telegram:</span> <a class="contacts-section-link" href="https://t.me/nik_dovgiy">@nik_dovgiy</a></div>
+     <div> <span class="contacts-section-type">Telegram:</span> <a class="contacts-section-link" href="https://t.me/nik_dov">@nik_dov</a></div>
+     <div> <span class="contacts-section-type">Linkedin:</span> <a class="contacts-section-link" href="https://www.linkedin.com/in/nikolay-dovgiy-a374961b7/">Nikolay (Nik_Dov) Dovgiy</a></div>
+     <div> <span class="contacts-section-type">Githab:</span> <a class="contacts-section-link" href="https://github.com/kolyan25lk">kolyan25lk</a></div>
+
 
     </div>
 <!-- Tech Skills-->
