--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div class="about-me-section">
                         <h2 class="about-me-profession">Front-End Developer </h2>
                         <h3 class="main-content-title">2+ years of development JS, React.js, Node.js 
-                          <br>  7+ completed projects</h2>
+                          <br>  6+ completed projects</h2>
 
                         <h1 class="about-me-name">Nikolay Dovgiy</h1>
 
@@ -78,6 +78,18 @@
         <p  class="my-work-experience-duty">
             This project was developed to consolidate my knowledge after completing the ITNaton 2.0 Frontend advanced training course on the Powercode academy platform in the period from January 2022 - Oktober 2022. The project was created from a layout in Figma using HTML + CSS + JavaScript on React.js using Webpack , Node.js. The project was completed within 15 days.
         </p>
+</li>
+
+<li class="my-projects-item">
+    <span class="my-projects-text">
+    <a href="https://kolyan25lk.github.io/material-site/" class="my-projects-link"> https://kolyan25lk.github.io/material-site/ </a>
+     .....................
+
+    <span class="my-projects-bracket">[</span> React.js, Node.js, Material UI <span class="my-projects-bracket">]</span></span>
+    </span>
+    <p  class="my-work-experience-duty">
+        This project was designed to consolidate my knowledge in mastering the skills of using Material UI. The project was created using React. js, JavaScript, Material UI Libraries, npm package manager and Node.js. The project was completed within 10 days.
+    </p>
 </li>
 
                         </ol>
