Update resume 27.01 part 2
Update resume 27.01 part 2

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div> <span class="contacts-section-type">E-mail:</span> <a class="contacts-section-link" href="mailto:kolyan25lk@gmail.com">kolyan25lk@gmail.com</a></div>
      <div> <span class="contacts-section-type">Telegram:</span> <a class="contacts-section-link" href="https://t.me/nik_dov">@nik_dov</a></div>
      <div> <span class="contacts-section-type">Linkedin:</span> <a class="contacts-section-link" href="https://www.linkedin.com/in/nikolay-dovgiy-a374961b7/">Nikolay (Nik_Dov) Dovgiy</a></div>
-     <div> <span class="contacts-section-type">Githab:</span> <a class="contacts-section-link" href="https://github.com/kolyan25lk">kolyan25lk</a></div>
+     <div> <span class="contacts-section-type">Github:</span> <a class="contacts-section-link" href="https://github.com/kolyan25lk">kolyan25lk</a></div>
 
 
     </div>
